crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__multi_type_simple.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"type\":[\"string\",\"null\"]}"
expression: is_valid_body(schema)
---
matches!(instance, serde_json::Value::String(_) | serde_json::Value::Null)
