crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__multi_type_with_integer.snap
---
source: crates/jsonschema-codegen/src/tests.rs
assertion_line: 184
description: "{\"type\":[\"integer\",\"object\"]}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => jsonschema::__private::types::is_integer(n),
            serde_json::Value::Object(_) => true,
            _ => false,
        }
