crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__multiple_of.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"multipleOf\":3,\"type\":\"number\"}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Number(n) => {
                jsonschema::__private::numeric::is_multiple_of_integer(n, 3f64)
            }
            _ => false,
        }
