crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__one_of_discriminator_int.snap
---
source: crates/jsonschema-codegen/src/tests.rs
assertion_line: 184
description: "{\"oneOf\":[{\"properties\":{\"code\":{\"const\":1},\"data\":{\"type\":\"string\"}},\"required\":[\"code\"],\"type\":\"object\"},{\"properties\":{\"code\":{\"const\":2},\"payload\":{\"type\":\"number\"}},\"required\":[\"code\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("code")
                        .and_then(|value| {
                            value
                                .as_i64()
                                .or_else(|| {
                                    value
                                        .as_f64()
                                        .and_then(|float| {
                                            (float.fract() == 0.0
                                                && float >= -9_223_372_036_854_775_808.0_f64
                                                && float < 9_223_372_036_854_775_808.0_f64)
                                                .then_some(float as i64)
                                        })
                                })
                        })
                }
                _ => None,
            };
            let mut matched = false;
            (if (matches!(__one_of_discriminator, Some(1i64))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            let mut __required_0 = false;
                            obj
                                .iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "code" => {
                                            __required_0 = true;
                                            {
                                                static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                                {
                                                    serde_json::from_str("1")
                                                        .expect("Failed to parse const number")
                                                });
                                                match instance {
                                                    serde_json::Value::Number(n) => {
                                                        jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                    }
                                                    _ => false,
                                                }
                                            }
                                        }
                                        "data" => instance.is_string(),
                                        _ => true,
                                    }
                                }) && __required_0
                        }
                        _ => false,
                    }
                })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }
                && if (matches!(__one_of_discriminator, Some(2i64))
                    && {
                        match instance {
                            serde_json::Value::Object(obj) => {
                                let mut __required_0 = false;
                                obj
                                    .iter()
                                    .all(|(key, instance)| {
                                        let key_str = key.as_str();
                                        match key_str {
                                            "code" => {
                                                __required_0 = true;
                                                {
                                                    static EXPECTED: std::sync::LazyLock<serde_json::Number> = std::sync::LazyLock::new(||
                                                    {
                                                        serde_json::from_str("2")
                                                            .expect("Failed to parse const number")
                                                    });
                                                    match instance {
                                                        serde_json::Value::Number(n) => {
                                                            jsonschema::__private::cmp::equal_numbers(n, &*EXPECTED)
                                                        }
                                                        _ => false,
                                                    }
                                                }
                                            }
                                            "payload" => instance.is_number(),
                                            _ => true,
                                        }
                                    }) && __required_0
                            }
                            _ => false,
                        }
                    })
                {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
        }
