crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__one_of_discriminator_string.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"oneOf\":[{\"properties\":{\"kind\":{\"const\":\"circle\"},\"radius\":{\"type\":\"number\"}},\"required\":[\"kind\"],\"type\":\"object\"},{\"properties\":{\"kind\":{\"const\":\"square\"},\"side\":{\"type\":\"number\"}},\"required\":[\"kind\"],\"type\":\"object\"}]}"
expression: is_valid_body(schema)
---
{
            let __one_of_discriminator = match instance {
                serde_json::Value::Object(obj) => {
                    obj.get("kind").and_then(serde_json::Value::as_str)
                }
                _ => None,
            };
            let mut matched = false;
            (if (matches!(__one_of_discriminator, Some("circle"))
                && {
                    match instance {
                        serde_json::Value::Object(obj) => {
                            let mut __required_0 = false;
                            obj
                                .iter()
                                .all(|(key, instance)| {
                                    let key_str = key.as_str();
                                    match key_str {
                                        "kind" => {
                                            __required_0 = true;
                                            instance.as_str() == Some("circle")
                                        }
                                        "radius" => instance.is_number(),
                                        _ => true,
                                    }
                                }) && __required_0
                        }
                        _ => false,
                    }
                })
            {
                if matched {
                    false
                } else {
                    matched = true;
                    true
                }
            } else {
                true
            }
                && if (matches!(__one_of_discriminator, Some("square"))
                    && {
                        match instance {
                            serde_json::Value::Object(obj) => {
                                let mut __required_0 = false;
                                obj
                                    .iter()
                                    .all(|(key, instance)| {
                                        let key_str = key.as_str();
                                        match key_str {
                                            "kind" => {
                                                __required_0 = true;
                                                instance.as_str() == Some("square")
                                            }
                                            "side" => instance.is_number(),
                                            _ => true,
                                        }
                                    }) && __required_0
                            }
                            _ => false,
                        }
                    })
                {
                    if matched {
                        false
                    } else {
                        matched = true;
                        true
                    }
                } else {
                    true
                }) && matched
        }
