crates/jsonschema-codegen/src/snapshots/jsonschema_codegen__tests__snapshot_tests__pattern_dollar_ref.snap
---
source: crates/jsonschema-codegen/src/tests.rs
description: "{\"patternProperties\":{\"^\\\\$ref\":{\"type\":\"string\"}}}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                obj.iter()
                    .filter(|(key, _)| key.as_str().starts_with("$ref"))
                    .all(|(_, instance)| { instance.is_string() })
            }
            _ => true,
        }
